Footer without responsive small.

--- a/src/components/base-styles/init/_colors.scss
+++ b/src/components/base-styles/init/_colors.scss
@@ -22,7 +22,7 @@ $chroma: add-colors((
         grey-another:           #9b9b9b,
         grey-light:             #ABABAB,
         grey-extra-light:       #D2D2D2,
-
+        grey-mozilla:           #38383d,
         brown-grey:             #929292,
 
         white:                  #FFF,
