Create slice component.

--- a/src/components/base-styles/base/normalize.scss
+++ b/src/components/base-styles/base/normalize.scss
@@ -20,6 +20,7 @@
 @import 'highlighted-text/highlighted-text';
 @import 'grouping/grouping';
 @import 'embedded/embedded';
+@import 'slice/slice';
 @import 'forms/components/button/button';
 @import 'forms/forms';
 @import 'forms/components/autocomplete/autocomplete';
