--- a/src/components/base-styles/init/_colors.scss
+++ b/src/components/base-styles/init/_colors.scss
@@ -57,6 +57,9 @@ $chroma: add-colors('functional', (
         text:                   'grey-dark',
         text-bg:                'off-white',
 
+        slice-bg:               'grey-dark-another',
+        slice-bg-light:         'white',
+
         title:                  'brand',
 
         link:                   'light-navy',
