--- a/src/components/components/teaser-box/teaser-box.scss
+++ b/src/components/components/teaser-box/teaser-box.scss
@@ -27,6 +27,7 @@
     display: flex;
     padding: 10px 20px 10px 15px;
     flex-direction: column;
+    color: color('grey-dark');
   }
 
   &__title {
