Update trainingi resources theme. References #57

--- a/src/components/components/teaser-box/teaser-box.scss
+++ b/src/components/components/teaser-box/teaser-box.scss
@@ -59,5 +59,16 @@
       margin-top: 25px;
     }
 
+    .teaser-box {
+
+      &__description {
+        color: color('grey-dark');
+      }
+
+      &__wrapper-link {
+        display: flex;
+      }
+    }
+
   }
 }
