Theme communication channels. References #55

--- a/src/components/components/communication-channels/communication-channel-list.scss
+++ b/src/components/components/communication-channels/communication-channel-list.scss
@@ -6,4 +6,10 @@
     display: flex;
     justify-content: space-around;
   }
+
+  // a {
+  //   .title {
+  //     color: black;
+  //   }
+  // }
 }
