--- a/src/components/components/filters/filters.scss
+++ b/src/components/components/filters/filters.scss
@@ -1,5 +1,9 @@
 @import './../../base-styles/init/init';
 
+/*
+  Adds basic style for a filter component.
+*/
+
 .filter {
   background-color: color('white');
   display: inline-block;
