--- a/src/components/components/communication-channels/communication-channel-list.scss
+++ b/src/components/components/communication-channels/communication-channel-list.scss
@@ -1,3 +1,7 @@
+/*
+  A wrapper for communication channels.
+*/
+
 .communication-channel-list {
   width: 100%;
 
@@ -6,10 +10,4 @@
     display: flex;
     justify-content: space-around;
   }
-
-  // a {
-  //   .title {
-  //     color: black;
-  //   }
-  // }
 }
