Updare leaders tool icon. References #81

--- a/src/components/base-styles/init/_colors.scss
+++ b/src/components/base-styles/init/_colors.scss
@@ -43,6 +43,7 @@ $chroma: add-colors((
 
         violet-blue:            #6806BD,
         violet:                 #9013FE,
+        'cyan':                  #59E1CF,
 ));
 
 // Define color names for functional uses.
