--- a/src/components/components/member/member.scss
+++ b/src/components/components/member/member.scss
@@ -55,19 +55,42 @@
     }
   }
 
+  &__link-content {
+    font-weight: 600;
+  }
+
+  &__icon {
+    @include margin-right(10px);
+    width: 24px;
+    height: 24px;
+    color: color('light-navy');
+  }
+
   &__button-list {
     @include margin-top(23px);
   }
 
   &__button {
+    @include margin(10px);
+    @include margin-top(35px);
     background-color: color('white');
+    font-weight: 600;
     border-radius: 2px;
     box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25);
     display: inline-block;
     padding: 10px;
     cursor: pointer;
-  }
 
+    svg,
+    span {
+      vertical-align: middle;
+    }
+
+    &--colored {
+      background-color: color('light-navy');
+      color: color('seafoam-blue');
+    }
+  }
 
   &__form-input {
     padding: 0;
