--- a/src/components/components/member/member.scss
+++ b/src/components/components/member/member.scss
@@ -8,35 +8,53 @@
   text-align: center;
 
   &__name {
-    @include font-size(30px);
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
     max-width: 275px;
     word-wrap: break-word;
   }
 
-  &__image {
-    width: 136px;
-    height: 136px;
+  &__image-wrapper {
+    width: 136px + 14px;
+    height: 136px + 14px;
     border-radius: 100%;
     border: 7px solid color('white');
     box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.1);
     margin-top: -20%;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  &__image {
+    width: auto;
+    max-width: 100%;
+    height: auto;
+    max-height: 100%;
   }
 
   &__location {
     @include margin-top(8px);
     max-width: 275px;
+    margin-left: auto;
+    margin-right: auto;
     opacity: .6;
   }
 
   &__description {
     @include margin-top(19px);
     max-width: 275px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   &__club {
     @include margin-top(64px);
     @include margin-bottom(58px);
     max-width: 275px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   &__link-prefix {
@@ -47,7 +65,8 @@
     @include margin-top(12px);
     max-width: 275px;
     word-break: break-all;
-    max-width: 275px; // width of the description at design
+    margin-left: auto;
+    margin-right: auto;
 
 
     &--personal-page {
@@ -73,27 +92,19 @@
   &__button {
     @include margin(10px);
     @include margin-top(35px);
-    background-color: color('white');
-    font-weight: 600;
-    border-radius: 2px;
-    box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25);
-    display: inline-block;
-    padding: 10px;
-    cursor: pointer;
 
     svg,
     span {
       vertical-align: middle;
     }
 
-    &--colored {
-      background-color: color('light-navy');
-      color: color('seafoam-blue');
+    span {
+      display: inline-block;
+      padding-left: 8px;
     }
   }
 
   &__form-input {
     padding: 0;
   }
-
 }
