--- a/src/components/components/communication-channels/communication-channels.scss
+++ b/src/components/components/communication-channels/communication-channels.scss
@@ -8,8 +8,19 @@
   text-align: center;
 
   &__image {
-    max-width: 64px;
-    margin-bottom: 18px;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+
+    &-wrapper {
+      width: 64px;
+      height: 64px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 18px;
+    }
   }
 
   &__title {
