--- a/src/components/base-styles/base/normalize.scss
+++ b/src/components/base-styles/base/normalize.scss
@@ -21,6 +21,7 @@
 @import 'grouping/grouping';
 @import 'embedded/embedded';
 @import 'slice/slice';
+@import 'icon/icon';
 @import 'forms/components/button/button';
 @import 'forms/forms';
 @import 'forms/components/autocomplete/autocomplete';
