Themes oraganization list for front page.

--- a/src/components/components/organization/organization.scss
+++ b/src/components/components/organization/organization.scss
@@ -1,16 +1,9 @@
+// Organization for organization page listing.
 .organization {
   display: flex;
 
   &__inner {
     padding: 5px;
-
-    p {
-      &:first-child {
-      }
-
-      &:last-child {
-      }
-    }
   }
 
   &__image {
