--- a/src/components/base-styles/base/highlighted-text/_highlighted-text.scss
+++ b/src/components/base-styles/base/highlighted-text/_highlighted-text.scss
@@ -12,6 +12,7 @@
 %highlighted-text {
   @include font-size(24px);
   @include line-height(35px);
+  @include typeface(text-highlighted);
   color: color('highlighted-text');
 
   &--intense {
