--- a/src/components/base-styles/init/_variables.scss
+++ b/src/components/base-styles/init/_variables.scss
@@ -104,6 +104,8 @@ $typefaces: (
   ),
   body: (
     font-family: $open-sans,
+    letter-spacing: 0,
+    weight: normal,
   ),
   pb-icon: (
     font-family: $pb-icon,
