--- a/src/components/navigation/main-navigation/main-navigation.scss
+++ b/src/components/navigation/main-navigation/main-navigation.scss
@@ -5,24 +5,13 @@
 // These are the default styles applied to tha main mage navigation.
 
 .main-navigation {
-  display: flex;
-  align-items: center;
-
   ul {
     list-style: none;
   }
 
   &__item-wrapper {
-    display: flex;
     margin: 0;
-    padding: 0;
-    width: 100%;
-    padding-top: 2px;
-
-  }
-
-  &__item {
-    padding-right: 22px;
+    padding: 20px 0 0 0;
   }
 
   &__link {
@@ -30,6 +19,9 @@
     @include line-height(27px);
     color: color('navigation');
     transition: .3s cubic-bezier(0.19, 1, 0.22, 1);
+    display: block;
+    padding-top: 5px;
+    padding-bottom: 5px;
 
     &:hover {
       color: color('navigation-hover');
@@ -40,18 +32,27 @@
     }
   }
 
-  // Logos.
+  @include breakpoint($tablet) {
+    display: flex;
+    align-items: center;
 
-  //&__mozilla-logo {
-  //  width: 45px;
-  //  height: 17px;
-  //  font-family: ZillaSlabHighlight;
-  //  font-size: 13px;
-  //  font-weight: bold;
-  //  font-style: normal;
-  //  font-stretch: normal;
-  //  line-height: 1.31;
-  //  letter-spacing: 0.2px;
-  //  color: #000000;
-  //}
+    &__item {
+      padding-right: 22px;
+    }
+
+    &__item-wrapper {
+      display: flex;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      padding-top: 2px;
+
+    }
+
+    &__link {
+      display: inline-block;
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+  }
 }
