--- a/src/components/components/leader-tools/leader-tools-list.scss
+++ b/src/components/components/leader-tools/leader-tools-list.scss
@@ -6,6 +6,7 @@
     &__title {
       @include margin-top(20px);
       display: flex;
+      align-items: center;
 
       @include breakpoint($tablet) {
         display: inline-block;
@@ -48,7 +49,9 @@
       padding: 0;
       display: flex;
       justify-content: space-between;
+      align-items: center;
       width: 100%;
+      text-align: left;
 
       &:hover,
       &:focus,
@@ -59,6 +62,10 @@
 
     &__title-symbol {
       font-size: 24px;
+      width: 24px;
+      display: inline-block;
+      text-align: center;
+      vertical-align: center;
     }
 
     &__wrapper--open  {
