Make leader tools responsive and add ARIA support

--- a/src/components/components/leader-tools/leader-tools-list.scss
+++ b/src/components/components/leader-tools/leader-tools-list.scss
@@ -58,6 +58,10 @@
       &:active {
         background-color: transparent;
       }
+
+      &:focus {
+        outline: auto;
+      }
     }
 
     &__title-symbol {
